--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,9 @@ coverage.xml
 
 # Ignore local-only Docker overrides
 docker-compose.override.yml
+
+#database
+db.sqlite3
+*.sqlite3
+*.sqlite3-journal
+db.*
